--- a/sic/templates/account/account.html
+++ b/sic/templates/account/account.html
@@ -48,6 +48,7 @@
     <nav>
         <ul>
             <li><a href="{% url 'edit_settings' %}">Edit Settings</a></li>
+            <li><a href="{% url 'edit_filters' %}">Edit Filters</a></li>
             <li><a href="{% url 'edit_profile' %}">Edit Profile</a></li>
             <li><a href="{{ user.get_absolute_url }}">View Profile</a></li>
             <li><a href="{% url 'bookmarks' %}">Bookmarks</a></li>
