--- a/sic/templates/posts/submit.html
+++ b/sic/templates/posts/submit.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load humanize %}
-{% block title %}{% if story %}edit story - {{ story.title }}{% else %}submit story{% endif %}{% endblock %}
+{% block title %}{% if story %}edit story - {{ story.title }}{% else %}submit story{% endif %} - sic{% endblock %}
 {% block content %}
     {% if story %}
         <h1>edit story</h1>
