--- a/sic/templates/account/edit_hat.html
+++ b/sic/templates/account/edit_hat.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{% if hat %}Edit hat{% else %}Create hat {% endif %}{% endblock %}
+{% block title %}{% if hat %}Edit hat{% else %}Create hat {% endif %} - sic{% endblock %}
 {% block content %}
     {% if hat %}
         <h1>edit hat</h1>
