--- a/sic/templates/account/notifications.html
+++ b/sic/templates/account/notifications.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Account notifications{% endblock %}
+{% block title %}Account notifications - sic{% endblock %}
 {% block style %}
     <style>
         .active.notification {
