--- a/sic/templates/account/signup.html
+++ b/sic/templates/account/signup.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}sic{% endblock %}
+{% block title %}Sign-up - sic{% endblock %}
 {% block content %}
     <form method="post" >
         {% csrf_token %}
