--- a/sic/templates/account/edit_settings.html
+++ b/sic/templates/account/edit_settings.html
@@ -19,6 +19,7 @@
     <h1>edit account settings</h1>
     <form method="POST" class="submit-story-form">
         {% csrf_token %}
+        {{ form.user }}
         <table>
             {{ form }}
         </table>
