Aggregations nav link: go to personal aggs if logged in

--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -53,7 +53,7 @@
                     <ul>
                         <li><a href="{% url 'all_stories' %}" id="all_stories_link">All stories</a></li>
                         <li><a href="{% url 'recent_comments' %}" id="recent_comments_link">Comments</a></li>
-                        <li><a href="{% url 'default_aggregations' %}" id="aggregations_link">Aggregations</a></li>
+                        <li><a href="{% url 'personal_aggregations' %}" id="aggregations_link">Aggregations</a></li>
                         <li><a href="{% url 'browse_tags' %}" id="browse_tags_link">Tags</a></li>
                         <li><a href="{% url 'search' %}" id="search_link">Search</a></li>
                         {% if request.user.is_authenticated %}
